--- a/favourite.html
+++ b/favourite.html
@@ -29,249 +29,257 @@
     <title>Favourite</title>
   </head>
   <body>
-    <!-- Start login Page -->
-    <div class="fav-parent">
-      <div class="container">
-        <!-- Left section -->
-        <section class="row fav-page">
-          <section class="col-md-2 col-12 left-fav-page"></section>
+    <div class="body-container">
+      <!-- Start login Page -->
+      <div class="fav-parent">
+        <div class="container">
+          <!-- Left section -->
+          <section class="row fav-page">
+            <section class="col-md-2 col-12 left-fav-page"></section>
 
-          <!-- Center Section -->
-          <section class="col-md-8 col-12 center-fav-page">
-            <!------------- First Product  ------------------->
-            <!-- First Row -->
-            <div class="fav-frow">
-              <h3>Wish List</h3>
-            </div>
+            <!-- Center Section -->
+            <section class="col-md-8 col-12 center-fav-page">
+              <!------------- First Product  ------------------->
+              <!-- First Row -->
+              <div class="fav-frow">
+                <h3>Wish List</h3>
+              </div>
 
-            <!-- Second Row -->
-            <div class="fav-srow">
-              <h6></h6>
-              <h6>Buy Online</h6>
-              <h6 class="availbility">Available in-store?</h6>
-              <h6></h6>
-            </div>
-            <hr />
+              <!-- Second Row -->
+              <div class="fav-srow">
+                <h6></h6>
+                <h6>Buy Online</h6>
+                <h6 class="availbility">Available in-store?</h6>
+                <h6></h6>
+              </div>
+              <hr />
 
-            <!-- Third Row -->
-            <!------------ Code for first product --------------->
-            <div class="prod-box-info first-product row">
-              <!-- Show image and information -->
-              <div class="col-md-4 prod-info">
-                <div class="prod-img">
-                  <img
-                    src="./assets/images/cushion.webp"
-                    alt="Cushion"
-                    title="Cushion"
-                  />
+              <!-- Third Row -->
+              <!------------ Code for first product --------------->
+              <div class="prod-box-info first-product row">
+                <!-- Show image and information -->
+                <div class="col-md-4 prod-info">
+                  <div class="prod-img">
+                    <img
+                      src="./assets/images/cushion.webp"
+                      alt="Cushion"
+                      title="Cushion"
+                    />
+                  </div>
+
+                  <div class="prod-txt">
+                    <h5>HANNELISE</h5>
+                    <span
+                      >Cushion multicolour 50x50 cm (20x20 ") 104.650.51</span
+                    >
+                  </div>
                 </div>
 
-                <div class="prod-txt">
-                  <h5>HANNELISE</h5>
-                  <span>Cushion multicolour 50x50 cm (20x20 ") 104.650.51</span>
+                <div class="col-md-4 prod-info"></div>
+
+                <!-- Show Price and Cateogry -->
+                <div class="col-md-4">
+                  <!-- Show price -->
+                  <div class="prod-price">
+                    <h6>EGP 299</h6>
+                  </div>
+                </div>
+
+                <!-- delete button -->
+                <div class="prod-infoo">
+                  <div class="prod-box col-1">
+                    <button class="del-prod">
+                      <i class="fas fa-trash-alt"></i>
+                    </button>
+                  </div>
+                  <!-- start option numbers -->
+                  <div class="prod-box col-1">
+                    <select>
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                      <option value="6">6</option>
+                      <option value="7">7</option>
+                      <option value="8">8</option>
+                      <option value="9">9</option>
+                      <option value="10">10</option>
+                      <option value="11">1</option>
+                      <option value="12">12</option>
+                      <option value="13">13</option>
+                      <option value="14">14</option>
+                      <option value="15">15</option>
+                      <option value="16">16</option>
+                    </select>
+                  </div>
+                  <!-- button For Shopping -->
+                  <div class="prod-box col-5">
+                    <button class="card-button">
+                      <i class="fas fa-shopping-bag"></i> Add to shopping bag
+                    </button>
+                  </div>
                 </div>
               </div>
 
-              <div class="col-md-4 prod-info"></div>
+              <!------------ Code for second product --------------->
+              <div class="prod-box-info second-product row product-space">
+                <!-- Show image and information -->
+                <div class="col-md-4 prod-info">
+                  <div class="prod-img">
+                    <img
+                      src="./assets/images/cushion.webp"
+                      alt="Cushion"
+                      title="Cushion"
+                    />
+                  </div>
 
-              <!-- Show Price and Cateogry -->
-              <div class="col-md-4">
-                <!-- Show price -->
-                <div class="prod-price">
-                  <h6>EGP 299</h6>
+                  <div class="prod-txt">
+                    <h5>HANNELISE</h5>
+                    <span
+                      >Cushion multicolour 50x50 cm (20x20 ") 104.650.51</span
+                    >
+                  </div>
+                </div>
+
+                <div class="col-md-4 prod-info"></div>
+
+                <!-- Show Price and Cateogry -->
+                <div class="col-md-4">
+                  <!-- Show price -->
+                  <div class="prod-price">
+                    <h6>EGP 299</h6>
+                  </div>
+                </div>
+
+                <!-- delete button -->
+                <div class="prod-infoo">
+                  <div class="prod-box col-1">
+                    <button class="del-prod">
+                      <i class="fas fa-trash-alt"></i>
+                    </button>
+                  </div>
+                  <!-- start option numbers -->
+                  <div class="prod-box col-1">
+                    <select>
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                      <option value="6">6</option>
+                      <option value="7">7</option>
+                      <option value="8">8</option>
+                      <option value="9">9</option>
+                      <option value="10">10</option>
+                      <option value="11">1</option>
+                      <option value="12">12</option>
+                      <option value="13">13</option>
+                      <option value="14">14</option>
+                      <option value="15">15</option>
+                      <option value="16">16</option>
+                    </select>
+                  </div>
+                  <!-- button For Shopping -->
+                  <div class="prod-box col-5">
+                    <button class="card-button">
+                      <i class="fas fa-shopping-bag"></i> Add to shopping bag
+                    </button>
+                  </div>
                 </div>
               </div>
 
-              <!-- delete button -->
-              <div class="prod-infoo">
-                <div class="prod-box col-1">
-                  <button class="del-prod">
-                    <i class="fas fa-trash-alt"></i>
-                  </button>
+              <!------------ Code for third product --------------->
+              <div class="prod-box-info third-product row product-space">
+                <!-- Show image and information -->
+                <div class="col-md-4 prod-info">
+                  <div class="prod-img">
+                    <img
+                      src="./assets/images/cushion.webp"
+                      alt="Cushion"
+                      title="Cushion"
+                    />
+                  </div>
+
+                  <div class="prod-txt">
+                    <h5>HANNELISE</h5>
+                    <span
+                      >Cushion multicolour 50x50 cm (20x20 ") 104.650.51</span
+                    >
+                  </div>
                 </div>
-                <!-- start option numbers -->
-                <div class="prod-box col-1">
-                  <select>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                    <option value="11">1</option>
-                    <option value="12">12</option>
-                    <option value="13">13</option>
-                    <option value="14">14</option>
-                    <option value="15">15</option>
-                    <option value="16">16</option>
-                  </select>
+
+                <div class="col-md-4 prod-info"></div>
+
+                <!-- Show Price and Cateogry -->
+                <div class="col-md-4">
+                  <!-- Show price -->
+                  <div class="prod-price">
+                    <h6>EGP 299</h6>
+                  </div>
                 </div>
-                <!-- button For Shopping -->
-                <div class="prod-box col-5">
+
+                <!-- delete button -->
+                <div class="prod-infoo">
+                  <div class="prod-box col-1">
+                    <button class="del-prod">
+                      <i class="fas fa-trash-alt"></i>
+                    </button>
+                  </div>
+                  <!-- start option numbers -->
+                  <div class="prod-box col-1">
+                    <select>
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                      <option value="6">6</option>
+                      <option value="7">7</option>
+                      <option value="8">8</option>
+                      <option value="9">9</option>
+                      <option value="10">10</option>
+                      <option value="11">1</option>
+                      <option value="12">12</option>
+                      <option value="13">13</option>
+                      <option value="14">14</option>
+                      <option value="15">15</option>
+                      <option value="16">16</option>
+                    </select>
+                  </div>
+                  <!-- button For Shopping -->
+                  <div class="prod-box col-5">
+                    <button class="card-button">
+                      <i class="fas fa-shopping-bag"></i> Add to shopping bag
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Start Div for total price -->
+              <div class="total-price">
+                <div class="show-price">
+                  <span>Subtotal</span>
+                  <h6>EGP 900</h6>
+                </div>
+
+                <div class="prod-box">
+                  <aside>Want to buy all these items online ?</aside>
                   <button class="card-button">
-                    <i class="fas fa-shopping-bag"></i> Add to shopping bag
+                    <i class="fas fa-shopping-bag"></i> Add All items to bag
                   </button>
                 </div>
               </div>
-            </div>
+              <!-- End Div for total price -->
+            </section>
 
-            <!------------ Code for second product --------------->
-            <div class="prod-box-info second-product row product-space">
-              <!-- Show image and information -->
-              <div class="col-md-4 prod-info">
-                <div class="prod-img">
-                  <img
-                    src="./assets/images/cushion.webp"
-                    alt="Cushion"
-                    title="Cushion"
-                  />
-                </div>
-
-                <div class="prod-txt">
-                  <h5>HANNELISE</h5>
-                  <span>Cushion multicolour 50x50 cm (20x20 ") 104.650.51</span>
-                </div>
-              </div>
-
-              <div class="col-md-4 prod-info"></div>
-
-              <!-- Show Price and Cateogry -->
-              <div class="col-md-4">
-                <!-- Show price -->
-                <div class="prod-price">
-                  <h6>EGP 299</h6>
-                </div>
-              </div>
-
-              <!-- delete button -->
-              <div class="prod-infoo">
-                <div class="prod-box col-1">
-                  <button class="del-prod">
-                    <i class="fas fa-trash-alt"></i>
-                  </button>
-                </div>
-                <!-- start option numbers -->
-                <div class="prod-box col-1">
-                  <select>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                    <option value="11">1</option>
-                    <option value="12">12</option>
-                    <option value="13">13</option>
-                    <option value="14">14</option>
-                    <option value="15">15</option>
-                    <option value="16">16</option>
-                  </select>
-                </div>
-                <!-- button For Shopping -->
-                <div class="prod-box col-5">
-                  <button class="card-button">
-                    <i class="fas fa-shopping-bag"></i> Add to shopping bag
-                  </button>
-                </div>
-              </div>
-            </div>
-
-            <!------------ Code for third product --------------->
-            <div class="prod-box-info third-product row product-space">
-              <!-- Show image and information -->
-              <div class="col-md-4 prod-info">
-                <div class="prod-img">
-                  <img
-                    src="./assets/images/cushion.webp"
-                    alt="Cushion"
-                    title="Cushion"
-                  />
-                </div>
-
-                <div class="prod-txt">
-                  <h5>HANNELISE</h5>
-                  <span>Cushion multicolour 50x50 cm (20x20 ") 104.650.51</span>
-                </div>
-              </div>
-
-              <div class="col-md-4 prod-info"></div>
-
-              <!-- Show Price and Cateogry -->
-              <div class="col-md-4">
-                <!-- Show price -->
-                <div class="prod-price">
-                  <h6>EGP 299</h6>
-                </div>
-              </div>
-
-              <!-- delete button -->
-              <div class="prod-infoo">
-                <div class="prod-box col-1">
-                  <button class="del-prod">
-                    <i class="fas fa-trash-alt"></i>
-                  </button>
-                </div>
-                <!-- start option numbers -->
-                <div class="prod-box col-1">
-                  <select>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                    <option value="11">1</option>
-                    <option value="12">12</option>
-                    <option value="13">13</option>
-                    <option value="14">14</option>
-                    <option value="15">15</option>
-                    <option value="16">16</option>
-                  </select>
-                </div>
-                <!-- button For Shopping -->
-                <div class="prod-box col-5">
-                  <button class="card-button">
-                    <i class="fas fa-shopping-bag"></i> Add to shopping bag
-                  </button>
-                </div>
-              </div>
-            </div>
-
-            <!-- Start Div for total price -->
-            <div class="total-price">
-              <div class="show-price">
-                <span>Subtotal</span>
-                <h6>EGP 900</h6>
-              </div>
-
-              <div class="prod-box">
-                <aside>Want to buy all these items online ?</aside>
-                <button class="card-button">
-                  <i class="fas fa-shopping-bag"></i> Add All items to bag
-                </button>
-              </div>
-            </div>
-            <!-- End Div for total price -->
+            <!-- Right Section -->
+            <section class="col-md-2 col-12 right-fav-page"></section>
           </section>
-
-          <!-- Right Section -->
-          <section class="col-md-2 col-12 right-fav-page"></section>
-        </section>
+        </div>
       </div>
+      <!-- End Login Page -->
     </div>
-    <!-- End Login Page -->
 
     <!-- Bootstrap JS -->
     <script
