--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="body-container">
       <div class="header-messages"></div>
-      <div class="navbar navbar-expand-xl navbar-light fixed-top">
+      <div class="navbar navbar-expand-xl navbar-light fixed-top bg-white">
         <a href="#" class="navbar-brand">
           <img class="logo" src="assets/images/ikea-logo.svg" alt="logo"
         /></a>
@@ -73,7 +73,7 @@
       </div>
 
       <!-- Gallery div -->
-      <div class="border-top mt-nav">
+      <div class="border-top mt-nav-2 pt-nav">
         <div class="image-gallery row">
           <div class="col-12 col-lg-6">
             <img
