Add sales buttons

--- a/index.html
+++ b/index.html
@@ -107,6 +107,22 @@
           </div>
         </div>
       </div>
+
+      <!-- Sales buttons -->
+      <div
+        class="sales-buttons d-flex justify-content-between border-bottom pb-5"
+      >
+        <img
+          src="https://www.ikea.com/images/19/38/19385db4e05919d70f0b4c2f94907b3d.jpg?f=l"
+          alt="Furniture sale"
+          class="w-49"
+        />
+        <img
+          src="https://www.ikea.com/images/db/c3/dbc35f1f06fc08923f78ceb23acc365a.jpg?f=l"
+          alt="Accessories sale"
+          class="w-49"
+        />
+      </div>
     </div>
 
     <!-- Bootstrap JS -->
