--- a/pages/products.html
+++ b/pages/products.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-------------- Start Font Awesome link --------------->
+    <!-- Icons -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+      integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+      crossorigin="anonymous"
+    />
+    <!------------ End Font-awesome links ------------>
+
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -14,6 +24,8 @@
     />
 
     <link rel="stylesheet" href="../assets/css/main.css" />
+    <!-- link code for icon link in top of page -->
+    <link rel="shortcut icon" href="../assets/images/ikea-logo.png" />
     <title>Products</title>
   </head>
   <body>
@@ -28,23 +40,94 @@
     </div>
 
     <div style="margin: 1.875rem 0;">
-      <h1>Children beds</h1>
+      <h3>Children beds</h3>
     </div>
 
     <section class='col-12 col-md-7 col-lg-7'>
-      <p>     
-         We understand that growing kids have lots of needs. Like a quiet spot to relax or a place to do their homework. That's why loft beds for kids are a super-smart multi-tasking solution, helping you free up space for a desk, sofa, wardrobe or pillow fort. Bring home a children's loft bed today!
+      <p class='description '>     
+         We . understand that growing kids have lots of needs. Like a quiet spot to relax or a place to do their homework. That's why loft beds for kids are a super-smart multi-tasking solution, helping you free up space for a desk, sofa, wardrobe or pillow fort. Bring home a children's loft bed today!
       </p>
     </section>
 
-    <div class="row sticky-top ">
+    <div class="row sticky-top filter-row ">
       <div class="col-12 col-md-7 col-lg-7 "> 
         <button type="button" class="btn btn-light filter-btn">compare</button>
-        <button type="button" class="btn btn-light filter-btn">sort</button>
-        <button type="button" class="btn btn-light filter-btn">color</button>
-        <button type="button" class="btn btn-light filter-btn">price</button>
-        <button type="button" class="btn btn-light filter-btn">special price</button>
-        <button type="button" class="btn btn-light filter-btn">All filters</button>
+
+        <!-- drop down Button -->
+        <button type="button" class="btn btn-light filter-btn " id="dropdownMenuLink" data-bs-toggle="dropdown">
+          sort <i class="fas fa-chevron-down"></i>
+        </button>
+
+         <!-- drop down List -->
+        <ul class="dropdown-menu mt-2" style="width: 250px;" aria-labelledby="dropdownMenuLink">
+          <li class="dropdown-item d-flex flex-row align-items-center justify-content-between" >
+              <label class="form-check-label" for="bestmatch-radio">
+                Best match
+              </label>
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="sort-group" id="bestmatch-radio">
+              </div>            
+          </li>
+          <li class="dropdown-item d-flex flex-row align-items-center justify-content-between" >
+            <label class="form-check-label" for="lowToHigh-radio">
+              Price: low to high
+            </label>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="sort-group" id="lowToHigh-radio">
+            </div>            
+          </li>
+          <li class="dropdown-item d-flex flex-row align-items-center justify-content-between" >
+            <label class="form-check-label" for="highToLowRadio">
+              Price: high to low
+            </label>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="sort-group" id="highToLowRadio">
+            </div>            
+          </li>
+        </ul>
+
+
+        <!-- drop down Button -->
+        <button type="button" class="btn btn-light filter-btn " id="dropdownMenuLink" data-bs-toggle="dropdown">
+          color <i class="fas fa-chevron-down"></i>
+        </button>
+
+         <!-- drop down List -->
+        <ul class="dropdown-menu mt-2" style="width: 250px;" aria-labelledby="dropdownMenuLink">
+         
+        </ul>
+
+
+        <button type="button" class="btn btn-light filter-btn" id="dropdownMenuLink" data-bs-toggle="dropdown">price <i class="fas fa-chevron-down"></i></button>
+        <!-- drop down List -->
+        <ul class="dropdown-menu mt-2" style="width: 250px;" aria-labelledby="dropdownMenuLink">
+          <li class="dropdown-item d-flex flex-row align-items-center justify-content-between" >
+              <label class="form-check-label" for="">
+                EGP 100-500
+              </label>
+              <div class="form-check">
+                <input  class="form-check-input" type="checkbox" value="" id="">
+              </div>            
+          </li>
+          <li class="dropdown-item d-flex flex-row align-items-center justify-content-between" >
+            <label class="form-check-label" for="">
+              EGP 500-1000
+            </label>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value=""  id="">
+            </div>            
+          </li>
+          <li class="dropdown-item d-flex flex-row align-items-center justify-content-between" >
+            <label class="form-check-label" for="">
+              EGP 1000-1500
+            </label>
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" value=""  id="">
+            </div>            
+          </li>
+        </ul>
+        <button type="button" class="btn btn-light filter-btn">size <i class="fas fa-chevron-down"></i></button>
+        <button type="button" class="btn btn-light filter-btn">All filters <i class="fas fa-filter"></i></button>
       </div>
 
       <div class="col-5  "> 
@@ -59,7 +142,7 @@
 
     </div>
 
-    <div style="height: 1000px;"></div>
+    <div style="height: 1000px; background-color: aliceblue;"></div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
