add slidder and on image buttons

--- a/pages/category.html
+++ b/pages/category.html
@@ -86,7 +86,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Gaming furniture</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -106,7 +106,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Beds</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -116,7 +116,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Sofas & armchairs</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -126,7 +126,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Bookcases & shelving units</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -136,7 +136,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Tables & desks</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -146,7 +146,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Cabinets & cupboards</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -156,7 +156,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">TV & media furniture</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -166,7 +166,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Chests of drawers & drawer units</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -176,7 +176,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Wardrobes</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -186,7 +186,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Chairs</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -196,7 +196,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Outdoor furniture</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -206,7 +206,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Sideboards, buffets & console tables</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -216,7 +216,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Children's furniture</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -226,7 +226,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Room dividers</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -236,7 +236,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Trolleys</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -246,7 +246,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Bar furniture</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -256,7 +256,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Armchairs & chaise longues</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -266,7 +266,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Café furniture</p>
             </div>
           </a>
           <a class="card category-card col-4 col-lg-2" href="#">
@@ -276,7 +276,7 @@
               alt="..."
             />
             <div class="card-body category-body">
-              <p class="card-text">Furniture sets</p>
+              <p class="card-text">Nursery furniture</p>
             </div>
           </a>
         </div>
@@ -317,12 +317,18 @@
             </p>
             <button class="see-all-btn">See all wardrobes</button>
           </div>
-          <div class="col-12 col-lg-6">
+          <div class="image-container col-12 col-md-6">
             <img
               src="https://www.ikea.com/ext/ingkadam/m/2c5ef270297e6af5/original/PH177014-crop001.jpg?f=xl"
             />
+            <a href="#"><div class="on-image-btn image1-position"></div></a>
+            <a href="#"><div class="on-image-btn image2-position"></div></a>
+            <a href="#"><div class="on-image-btn image3-position"></div></a>
+            <a href="#"><div class="on-image-btn image4-position"></div></a>
+            <a href="#"><div class="on-image-btn image5-position"></div></a>
+            <a href="#"><div class="on-image-btn image6-position"></div></a>
           </div>
-          <div class="image-column col-6 col-lg-3">
+          <div class="image-column col-6 col-md-3">
             <img
               class="short-img"
               src="https://www.ikea.com/ext/ingkadam/m/13eb5edd6b5d68a3/original/PH162765-crop001.jpg?f=xs"
@@ -332,7 +338,7 @@
               src="https://www.ikea.com/ext/ingkadam/m/6624b8c6d7b521e4/original/PH176180-crop001.jpg?f=xs"
             />
           </div>
-          <div class="image-column col-6 col-lg-3">
+          <div class="image-column col-6 col-md-3">
             <img
               class="long-img"
               src="https://www.ikea.com/ext/ingkadam/m/50d75c8a15d5f07b/original/PH176410-crop001.jpg?f=xs"
@@ -346,7 +352,7 @@
       </div>
 
       <!-- Steps cards -->
-      <div class="row g-1 my-4">
+      <div class="row g-1">
         <div class="card step-card col-md-6 col-lg-3">
           <div class="card-body step-body">
             <svg
@@ -419,6 +425,46 @@
             <h5 class="step-title">Payment options</h5>
             <p>How to pay, in store and online</p>
           </div>
+        </div>
+      </div>
+
+      <!-- Card with text right -->
+      <div>
+        <div class="row-card-holder">
+          <h4 class="head-title">A chair that's up for the job, no matter what it is</h4>
+          <a class="row card row-card g-0" href="#">
+            <img
+              class="col-12 col-sm-6 col-md-8"
+              src="https://www.ikea.com/images/tips-for-using-one-chair-for-different-activities-3b7e863226f0c8fb9443d224536074e0.jpg?f=xl"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="col-12 col-sm-6 col-md-4 card-body card-right" style="background-color: #263242;">
+              <h4 class="card-text head-title">One chair to do it all</h4>
+              <button class="card-btn">
+                <i class="bi bi-arrow-right"></i>
+              </button>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <!-- Slidder static -->
+      <div class="images-cards-container">
+        <div class="image-card col-6 col-md-2">
+          <img src="https://www.ikea.com/images/a-hand-controlling-the-flow-of-water-from-an-arched-mixer-ta-7ab00d7ab5cbae1bc654fab0e4d0fdd7.jpg?f=xxs"/>
+        </div>
+        <div class="image-card col-6 col-md-2">
+          <img src="https://www.ikea.com/images/a-beige-upholstered-bed-covered-in-white-bed-linen-with-a-ro-1000cebd78155c6e4692a6e2895e1217.jpg?f=xxs"/>
+        </div>
+        <div class="image-card col-6 col-md-2">
+          <img src="https://www.ikea.com/images/a-sheer-white-curtain-billowing-in-front-of-a-sunny-window-w-00318c01fb4b82f4a6b99a0f4f582cca.jpg?f=xxs"/>
+        </div>
+        <div class="image-card col-6 col-md-2">
+          <img src="https://www.ikea.com/images/a-white-countertop-with-a-person-chopping-green-vegetables-o-95f2de0ed6972bf6e3f564a9bdafd93e.jpg?f=xxs"/>
+        </div>
+        <div class="image-card col-6 col-md-2">
+          <img src="https://www.ikea.com/images/a-woman-in-a-sunny-room-with-a-bottle-of-cleaning-fluid-in-o-a8375bd30fe0294ea5e69c1d936585de.jpg?f=xxs"/>
         </div>
       </div>
     </div>
