Add teaser section & move mixins file to abstracts folder

--- a/index.html
+++ b/index.html
@@ -123,6 +123,58 @@
           class="w-49"
         />
       </div>
+
+      <!-- Teaser Slider -->
+      <div class="teaser border-top pt-2">
+        <h2>Now in IKEA Egypt</h2>
+      </div>
+
+      <!-- Slider -->
+      <div class="slider"></div>
+
+      <!-- Teaser Grid -->
+      <div class="border-top mt-nav-2 pt-nav">
+        <div class="teaser-info-container">
+          <h2>Winter Collections</h2>
+          <a href="#">
+            <button class="teaser-btn">
+              See more from our winter collections
+            </button>
+          </a>
+        </div>
+        <div class="image-gallery row">
+          <div class="col-12 col-lg-6">
+            <img
+              src="https://www.ikea.com/ext/ingkadam/m/37ba9b3082f51730/original/PH180658.jpg?f=xxxl"
+              alt
+            />
+          </div>
+          <div class="image-column col-6 col-lg-3">
+            <img
+              class="short-img"
+              src="https://www.ikea.com/ext/ingkadam/m/5a10d3a7dad39a15/original/PH181434.jpg?f=m"
+              alt
+            />
+            <img
+              class="long-img"
+              src="https://www.ikea.com/ext/ingkadam/m/b91eb2a1e186f11/original/PH180662.jpg?f=m"
+              alt
+            />
+          </div>
+          <div class="image-column col-6 col-lg-3">
+            <img
+              class="long-img"
+              src="https://www.ikea.com/ext/ingkadam/m/725cbfe4d56f29a2/original/PH180258.jpg?f=m"
+              alt
+            />
+            <img
+              class="short-img"
+              src="https://www.ikea.com/ext/ingkadam/m/566db91500a81d2e/original/PH179942-crop002.jpg?f=m"
+              alt
+            />
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Bootstrap JS -->
