--- a/pages/category.html
+++ b/pages/category.html
@@ -431,7 +431,9 @@
       <!-- Card with text right -->
       <div>
         <div class="row-card-holder">
-          <h4 class="head-title">A chair that's up for the job, no matter what it is</h4>
+          <h4 class="head-title">
+            A chair that's up for the job, no matter what it is
+          </h4>
           <a class="row card row-card g-0" href="#">
             <img
               class="col-12 col-sm-6 col-md-8"
@@ -439,7 +441,10 @@
               class="card-img-top"
               alt="..."
             />
-            <div class="col-12 col-sm-6 col-md-4 card-body card-right" style="background-color: #263242;">
+            <div
+              class="col-12 col-sm-6 col-md-4 card-body card-right"
+              style="background-color: #263242"
+            >
               <h4 class="card-text head-title">One chair to do it all</h4>
               <button class="card-btn">
                 <i class="bi bi-arrow-right"></i>
@@ -452,19 +457,29 @@
       <!-- Slidder static -->
       <div class="images-cards-container">
         <div class="image-card col-6 col-md-2">
-          <img src="https://www.ikea.com/images/a-hand-controlling-the-flow-of-water-from-an-arched-mixer-ta-7ab00d7ab5cbae1bc654fab0e4d0fdd7.jpg?f=xxs"/>
+          <img
+            src="https://www.ikea.com/images/a-hand-controlling-the-flow-of-water-from-an-arched-mixer-ta-7ab00d7ab5cbae1bc654fab0e4d0fdd7.jpg?f=xxs"
+          />
         </div>
         <div class="image-card col-6 col-md-2">
-          <img src="https://www.ikea.com/images/a-beige-upholstered-bed-covered-in-white-bed-linen-with-a-ro-1000cebd78155c6e4692a6e2895e1217.jpg?f=xxs"/>
+          <img
+            src="https://www.ikea.com/images/a-beige-upholstered-bed-covered-in-white-bed-linen-with-a-ro-1000cebd78155c6e4692a6e2895e1217.jpg?f=xxs"
+          />
         </div>
         <div class="image-card col-6 col-md-2">
-          <img src="https://www.ikea.com/images/a-sheer-white-curtain-billowing-in-front-of-a-sunny-window-w-00318c01fb4b82f4a6b99a0f4f582cca.jpg?f=xxs"/>
+          <img
+            src="https://www.ikea.com/images/a-sheer-white-curtain-billowing-in-front-of-a-sunny-window-w-00318c01fb4b82f4a6b99a0f4f582cca.jpg?f=xxs"
+          />
         </div>
         <div class="image-card col-6 col-md-2">
-          <img src="https://www.ikea.com/images/a-white-countertop-with-a-person-chopping-green-vegetables-o-95f2de0ed6972bf6e3f564a9bdafd93e.jpg?f=xxs"/>
+          <img
+            src="https://www.ikea.com/images/a-white-countertop-with-a-person-chopping-green-vegetables-o-95f2de0ed6972bf6e3f564a9bdafd93e.jpg?f=xxs"
+          />
         </div>
         <div class="image-card col-6 col-md-2">
-          <img src="https://www.ikea.com/images/a-woman-in-a-sunny-room-with-a-bottle-of-cleaning-fluid-in-o-a8375bd30fe0294ea5e69c1d936585de.jpg?f=xxs"/>
+          <img
+            src="https://www.ikea.com/images/a-woman-in-a-sunny-room-with-a-bottle-of-cleaning-fluid-in-o-a8375bd30fe0294ea5e69c1d936585de.jpg?f=xxs"
+          />
         </div>
       </div>
     </div>
